daily : git folders checker, brew verbose. intellij : jvm settings adjusted