@@ -1,17 +1,27 @@
--Xss16m 
--XX:PermSize=1g 
--XX:MaxPermSize=2g 
 -Xms2g
--Xmx2g 
--XX:+UseParallelOldGC 
+-Xmx2g
+-Xss16m
+-XX:PermSize=512m
+-XX:MaxPermSize=350m
+-XX:ReservedCodeCacheSize=96m
+-XX:+UseCodeCacheFlushing
+-XX:+UseCompressedOops
+-ea
+-server
+-XX:+UseParNewGC
 -XX:ParallelGCThreads=8
+-XX:+UseConcMarkSweepGC
+-XX:+ExplicitGCInvokesConcurrent
 -XX:+PrintGCDetails 
+-XX:+PrintFlagsFinal
 -XX:+AggressiveOpts 
 -XX:ReservedCodeCacheSize=256m 
 -XX:+CMSClassUnloadingEnabled
--XX:+UseCodeCacheFlushing       
--XX:+UseCompressedOops
 -XX:+CMSPermGenSweepingEnabled 
+-XX:CMSInitiatingOccupancyFraction=60
+-XX:+CMSClassUnloadingEnabled
+-XX:+CMSParallelRemarkEnabled 
+-XX:+UseAdaptiveGCBoundary
 -XX:+UseSplitVerifier 
 -XX:CompileThreshold=10000 
 -XX:+UseCompressedStrings 
@@ -19,5 +29,7 @@
 -XX:+UseStringCache 
 -XX:+UseFastAccessorMethods 
 -XX:+UseLargePages 
+-XX:+UnlockDiagnosticVMOptions 
 -XX:LargePageSizeInBytes=512m
 -Dawt.useSystemAAFontSettings=lcd
+-Dswing.aatext=true
